--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/5_3_update_model_version.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/5_3_update_model_version.ipynb
@@ -9,7 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,17 +73,39 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ModelVersion: aliases=['Candidate', 'Development'], creation_timestamp=1764870293302, current_stage='None', description='This is a new description for model version 1', last_updated_timestamp=1764928876125, name='random-forest-classifier', run_id='df48b07ec25c4666bc3f725bc1319e71', run_link=None, source='file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/df48b07ec25c4666bc3f725bc1319e71/artifacts/RandomForestClassifier', status='READY', status_message=None, tags={}, user_id=None, version=1>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# update version 1 \n",
+    "# update version 1 -> you are updating metadata of the model version\n",
     "client.update_model_version(name = registered_model_name, version = \"1\", description = \"This is a new description for model version 1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ModelVersion: aliases=['Champion'], creation_timestamp=1764870829103, current_stage='None', description='This is a new description for model version 2', last_updated_timestamp=1764928934528, name='random-forest-classifier', run_id='2b7b494ed8ad4982aa09d811aca42aac', run_link=None, source='file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/2b7b494ed8ad4982aa09d811aca42aac/artifacts/RandomForestClassifier', status='READY', status_message=None, tags={}, user_id=None, version=2>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# update version 2\n",
     "client.update_model_version(name = registered_model_name, version = \"2\", description = \"This is a new description for model version 2\")"
@@ -90,7 +132,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ModelVersion: aliases=['Candidate', 'Development'], creation_timestamp=1764870293302, current_stage='None', description='This is a new description for model version 1', last_updated_timestamp=1764929042053, name='random-forest-classifier', run_id='df48b07ec25c4666bc3f725bc1319e71', run_link=None, source='file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/df48b07ec25c4666bc3f725bc1319e71/artifacts/RandomForestClassifier', status='READY', status_message=None, tags={'validation_status': 'pending'}, user_id=None, version=1>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.update_model_version(name = registered_model_name, version = \"1\", description = \"This is a new description for model version 1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
