--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/5_4_retrieve_model_info.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/5_4_retrieve_model_info.ipynb
@@ -9,7 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,18 +80,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mlflow.entities.model_registry.registered_model.RegisteredModel"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(registered_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model name: random-forest-classifier\n",
+      "Model creation time: 1764870293297\n",
+      "Model tags: {'framework': 'sklearn', 'project_name': 'UNDEFINED', 'task': 'classification'}\n",
+      "Model description: This is a random forest classifier model\n",
+      "Model latest version: [<ModelVersion: aliases=['Champion'], creation_timestamp=1764870829103, current_stage='None', description='This is a new description for model version 2', last_updated_timestamp=1764928934528, name='random-forest-classifier', run_id='2b7b494ed8ad4982aa09d811aca42aac', run_link=None, source='file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/2b7b494ed8ad4982aa09d811aca42aac/artifacts/RandomForestClassifier', status='READY', status_message=None, tags={'validation_status': 'Ready for Deployment'}, user_id=None, version=2>]\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Model name: {registered_model.name}\")\n",
     "print(f\"Model creation time: {registered_model.creation_timestamp}\")\n",
@@ -105,15 +148,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the difference between get_model_version and get_registered_model is the granularity\n",
     "# get model version 1\n",
     "model_version_1 = client.get_model_version(name = registered_model_name, version = \"1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model version: 1\n",
+      "Model version creation time: 1764870293302\n",
+      "Model version description: This is a new description for model version 1\n",
+      "Model version source: file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/df48b07ec25c4666bc3f725bc1319e71/artifacts/RandomForestClassifier\n",
+      "Model version status: READY\n",
+      "Model version run_id: df48b07ec25c4666bc3f725bc1319e71\n",
+      "Model version tags: {'validation_status': 'pending'}\n",
+      "Model version aliases: ['Candidate', 'Development']\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Model version: {model_version_1.version}\")\n",
     "print(f\"Model version creation time: {model_version_1.creation_timestamp}\")\n",
@@ -127,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +196,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model version: 2\n",
+      "Model version creation time: 1764870829103\n",
+      "Model version description: This is a new description for model version 2\n",
+      "Model version source: file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/2b7b494ed8ad4982aa09d811aca42aac/artifacts/RandomForestClassifier\n",
+      "Model version status: READY\n",
+      "Model version run_id: 2b7b494ed8ad4982aa09d811aca42aac\n",
+      "Model version tags: {'validation_status': 'Ready for Deployment'}\n",
+      "Model version aliases: ['Champion']\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Model version: {model_version_2.version}\")\n",
     "print(f\"Model version creation time: {model_version_2.creation_timestamp}\")\n",
@@ -172,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,9 +255,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_name': 'random-forest-classifier',\n",
+       " '_version': 1,\n",
+       " '_creation_time': 1764870293302,\n",
+       " '_last_updated_timestamp': 1764929042053,\n",
+       " '_description': 'This is a new description for model version 1',\n",
+       " '_user_id': None,\n",
+       " '_current_stage': 'None',\n",
+       " '_source': 'file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/df48b07ec25c4666bc3f725bc1319e71/artifacts/RandomForestClassifier',\n",
+       " '_run_id': 'df48b07ec25c4666bc3f725bc1319e71',\n",
+       " '_run_link': None,\n",
+       " '_status': 'READY',\n",
+       " '_status_message': None,\n",
+       " '_tags': {'validation_status': 'pending'},\n",
+       " '_aliases': ['Candidate', 'Development']}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_version_champ.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model version: 1\n",
+      "Model version creation time: 1764870293302\n",
+      "Model version description: This is a new description for model version 1\n",
+      "Model version source: file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/df48b07ec25c4666bc3f725bc1319e71/artifacts/RandomForestClassifier\n",
+      "Model version status: READY\n",
+      "Model version run_id: df48b07ec25c4666bc3f725bc1319e71\n",
+      "Model version tags: {'validation_status': 'pending'}\n",
+      "Model version aliases: ['Candidate', 'Development']\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Model version: {model_version_champ.version}\")\n",
     "print(f\"Model version creation time: {model_version_champ.creation_timestamp}\")\n",
@@ -219,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
