--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/6_2_searching_runs.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/6_2_searching_runs.ipynb
@@ -25,6 +25,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import mlflow\n",
     "from mlflow_for_ml_dev.src.utils.folder_operations import get_project_root\n",
     "\n",
