--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/5_1_registering_a_model.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/5_1_registering_a_model.ipynb
@@ -24,7 +24,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/12/04 18:10:01 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/04 18:10:01 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    }
+   ],
    "source": [
     "# instantiate a model\n",
     "rfc = RandomForestClassifier()\n",
@@ -85,13 +114,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/12/04 18:20:35 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/04 18:20:35 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "Registered model 'registered-model-sdk' already exists. Creating a new version of this model...\n",
+      "Created version '2' of model 'registered-model-sdk'.\n"
+     ]
+    }
+   ],
    "source": [
     "# instantiate a model\n",
     "rfc = RandomForestClassifier(n_estimators=1)\n",
     "\n",
     "with mlflow.start_run(run_name=\"registering_model_providing_name\") as run:\n",
     "    # log the model\n",
+    "    # use registered_model_name to register the model while logging\n",
+    "    # by running the same mlflow.sklearn.log_model with the same registered_model_name,\n",
+    "    # we create a new version of the registered model\n",
     "    mlflow.sklearn.log_model(sk_model = rfc, artifact_path= rfc.__class__.__name__, registered_model_name=\"registered-model-sdk\")"
    ]
   },
@@ -127,8 +170,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model registered-model-via-client created\n",
+      "Model description: None\n",
+      "Model creation timestamp: 1764868956016\n",
+      "Model Tags: {}\n",
+      "Model Aliases: {}\n"
+     ]
+    }
+   ],
    "source": [
+    "# model name should be unique in the workspace\n",
+    "# we registered a model, but without versioning it. For versioning, see next cell\n",
     "model_name = \"registered-model-via-client\"\n",
     "\n",
     "try:\n",
@@ -161,12 +218,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model version 1 created\n",
+      "Model version status: READY\n",
+      "Model version description: Model Version created using MLflow Client\n",
+      "Model version creation timestamp: 1764869212001\n",
+      "Model version source: file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/94a88b00553f47bf923a9a0a11a32581/artifacts\n",
+      "Model version run_id: 94a88b00553f47bf923a9a0a11a32581\n",
+      "Model version status_message: None\n"
+     ]
+    }
+   ],
    "source": [
+    "# So, you first create_registered_model, then create_model_version to assign a version to it\n",
+    "\n",
     "try:\n",
     "    model_version = client.create_model_version(\n",
     "        name = model_name,\n",
-    "        source = run.info.artifact_uri,\n",
+    "        source = run.info.artifact_uri, # we are using artifacts from a cell above\n",
     "        run_id = run.info.run_id,\n",
     "        description = \"Model Version created using MLflow Client\")\n",
     "except Exception as e:\n",
@@ -199,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
