--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/5_2_update_registered_model.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/5_2_update_registered_model.ipynb
@@ -15,6 +15,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import mlflow\n",
     "from mlflow_for_ml_dev.src.utils.folder_operations import get_project_root\n",
     "\n",
@@ -24,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/03/09 10:32:07 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "2025/12/04 18:44:53 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/04 18:44:53 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
       "Successfully registered model 'random-forest-classifier'.\n",
       "Created version '1' of model 'random-forest-classifier'.\n"
      ]
@@ -52,7 +73,7 @@
     "\n",
     "registered_model_name = \"random-forest-classifier\"\n",
     "with mlflow.start_run(run_name=\"registering-model\") as run:\n",
-    "    # Log the model\n",
+    "    # Log and register the model\n",
     "    mlflow.sklearn.log_model(sk_model = rfc, artifact_path = rfc.__class__.__name__, registered_model_name=registered_model_name)   "
    ]
   },
@@ -65,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,21 +107,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<RegisteredModel: aliases={}, creation_timestamp=1741534327101, description='This is a random forest classifier model', last_updated_timestamp=1741534327166, latest_versions=[<ModelVersion: aliases=[], creation_timestamp=1741534327107, current_stage='None', description=None, last_updated_timestamp=1741534327107, name='random-forest-classifier', run_id='aeed54e00a304936a4defc509dffbf48', run_link=None, source='file:///C:/Users/manue/projects/mlflow_for_ml_dev/mlruns/0/aeed54e00a304936a4defc509dffbf48/artifacts/RandomForestClassifier', status='READY', status_message=None, tags={}, user_id=None, version=1>], name='random-forest-classifier', tags={}>"
+       "<RegisteredModel: aliases={}, creation_timestamp=1764870293297, description='This is a random forest classifier model', last_updated_timestamp=1764870368142, latest_versions=[<ModelVersion: aliases=[], creation_timestamp=1764870293302, current_stage='None', description=None, last_updated_timestamp=1764870293302, name='random-forest-classifier', run_id='df48b07ec25c4666bc3f725bc1319e71', run_link=None, source='file:///C:/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlruns/0/df48b07ec25c4666bc3f725bc1319e71/artifacts/RandomForestClassifier', status='READY', status_message=None, tags={}, user_id=None, version=1>], name='random-forest-classifier', tags={}>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# we updated the description of the registered model\n",
     "client.update_registered_model(name = registered_model_name, description=\"This is a random forest classifier model\")"
    ]
   },
@@ -125,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +158,7 @@
     "}\n",
     "\n",
     "for key, value in registered_model_tags.items():\n",
-    "    \n",
+    "    # adding tags to the registered model    \n",
     "    client.set_registered_model_tag(name=registered_model_name, key=key, value=value)"
    ]
   },
@@ -144,18 +166,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set Model Alias"
+    "## Set Model Alias\n",
+    "Alias is metadata for organization of different model versions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_aliases = [\"Champion\", \"Candidate\",\"Development\"]\n",
     "\n",
     "for model_alias in model_aliases:\n",
+    "    # you need to specify to which version the alias refers to\n",
+    "    # each version can have a unique alias. If you assign the same alias to a different version,\n",
+    "    # it will be moved from the previous version to the new one\n",
     "    client.set_registered_model_alias(name=registered_model_name, alias = model_alias, version=\"1\")\n"
    ]
   },
@@ -168,14 +194,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/03/09 10:33:38 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "2025/12/04 18:53:49 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/04 18:53:49 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
       "Registered model 'random-forest-classifier' already exists. Creating a new version of this model...\n",
       "Created version '2' of model 'random-forest-classifier'.\n"
      ]
@@ -192,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
